<resources>
    <string name="app_name">PickUpGames</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signOut">Sign Out</string>
    <string name="SignUp"><bold>+</bold></string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="timeFrame">Time</string>
    <string name="attending">Attend</string>
    <string name="notgoing">Decline</string>
    <string name="enter_name">Enter Username</string>
    <string name="add_btn">Add</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Username</string>
    <string name="pwd_hint">Password</string>
    <string name="enter_info">Enter Information</string>
    <string name="sure">Are you sure you want to delete?</string>
    <string-array name="time_options">
        <item>AM</item>
        <item>PM</item>
    </string-array>
</resources>
