<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/title"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_info"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/userName"
                android:layout_below="@id/title"
                android:hint="@string/name_hint"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/email"
                android:layout_below="@id/userName"
                android:layout_marginTop="15dp"
                android:hint="@string/email_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/password"
                android:layout_marginTop="15dp"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_below="@id/email"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/add"
                android:text="@string/add_btn"
                android:layout_width="match_parent"
                android:layout_below="@id/password"
                android:layout_marginTop="15dp"
                android:background="@color/colorAccent"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>