<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.robertwais.pickupgames.DetailsActivity">

    <Button
        android:id="@+id/declineBtn"
        android:layout_width="152dp"
        android:layout_height="47dp"
        android:layout_marginBottom="172dp"
        android:layout_marginEnd="16dp"
        android:text="@string/notgoing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/titleInput"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="122dp"
        android:layout_height="38dp"
        android:layout_marginBottom="404dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/description"
        android:textAlignment="textStart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/descInput"
        android:layout_width="358dp"
        android:layout_height="92dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="TextView"
        android:maxLines = "100"
        android:scrollbars = "vertical"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleInput"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="110dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/timeFrame"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/attendingBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.774" />

    <TextView
        android:id="@+id/timeInput"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/descInput"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/attendingBtn"
        android:layout_width="152dp"
        android:layout_height="47dp"
        android:layout_marginBottom="172dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/attending"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/declineBtn"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
